# yellow-client-native

./: .gitignore  .gitmodules  CLAUDE.md  INSTALL.md  README.md  TODO.md  android-all-logs.sh  android-build.sh  android-logs-alt.sh  android-logs.sh  android-run.sh  build-debug.bat  build.bat  build.js  c++-fix-readme.md  commit.bat  commit.sh  copy-cxx-lib.sh  dev.sh  https.ignorre  package-lock.json  package.json  start-dev-server.bat  start-dev.bat  v8-env.sh  vite.config.js
.cargo/: config.toml
.github/workflows/: cloud-publish.yaml
aider/: cmd
android/: build.gradle.kts  notes
docs/: development.md  filesystem.md
e2e/: README.md  jest.config.android.js  package-lock.json  package.json  tsconfig.json
e2e/scripts/: quick-test.sh  setup-and-test.sh
e2e/setup/: appium.config.ts  global.setup.ts  global.teardown.ts  jest.setup.ts
e2e/tests/: integration-flow.test.ts  service-communication.test.ts  service-initialization.test.ts
e2e/utils/: NativeServiceTester.ts
scripts/: build-cross-platform.sh  setup-v8-cross-compile.sh
src/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Notification.xaml  Notification.xaml.cs  NotificationManager.cs  Yellow.csproj  build.bat  build.sh
src-tauri/: .gitignore  Cargo.toml  android-run.sh  build.rs  build.sh  notification.html  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  misc.rs  monitors.rs  monitors2.rs  notification.rs  notifications.rs  rusty.rs
src-tauri/static/: notification.html
src/routes/: +page.svelte
src/routes/notification/: +page.svelte
src/routes/notification/components/: NewMessage.svelte
static/: notification.html
tauri-plugin-yellow/: .gitignore  Cargo.toml  README.md  build.rs
tauri-plugin-yellow/android/: build.gradle.kts
tauri-plugin-yellow/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-yellow/android/src/main/: AndroidManifest.xml
tauri-plugin-yellow/android/src/main/java/: Account.kt  AccountManager.kt  BootReceiver.kt  EncryptedStorage.kt  Example.kt  ExamplePlugin.kt  Files.kt  YellowForegroundService.kt
tauri-plugin-yellow/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-yellow/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-yellow/examples/vanilla/src-tauri/capabilities/: default.json
tauri-plugin-yellow/examples/vanilla/src-tauri/src/: lib.rs
tauri-plugin-yellow/ios/: Package.swift  README.md
tauri-plugin-yellow/ios/Sources/: ExamplePlugin.swift
tauri-plugin-yellow/permissions/: default.toml
tauri-plugin-yellow/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
