[package]
name = "yellow"
version = "0.1.0"
description = "Experience the freedom of decentralized world"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = { git = "https://github.com/koo5/plugins-workspace", version = "2.2.2" }
window-vibrancy = "0.6.0"
sentry-rust-minidump = "0.9"
tauri-plugin-sentry = "0.4.1"


[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.18.2"
gtk = "0.18.2"
glib = "0.20.9"
xcb = "0.9"
libc = "0.2"


[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.26.0"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
windows-core = "0.60.0"





